--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
     height: 100vh;
     width: 100vw;
@@ -6,16 +12,17 @@ body{
     justify-content: center;
     align-items: center;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 img{
-    width: 70vw;
-    height: 70vw;
+    width: 400px;
+    height: 400px;
     min-width: fit-content;
     min-height: fit-content;
-    max-width: 100vw;
-    background-size: cover;
+    background-size: auto;
     margin-top: 30px;
+
 }
 
 form{
@@ -27,8 +34,17 @@ form{
 input{
     height: 20px;
     font-size: 18px;
+    padding: 12px;
 }
 
 button{
     font-size: 18px;
+    padding: 0 5px;
+}
+
+@media screen and (max-width: 500px){
+    img{
+        width: 200px;
+        height: 200px;
+    }
 }
